<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_title_container"
    android:id="@+id/search_friend_layout"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/action_search_friend_placeholder"
        android:minWidth="300sp"
        app:boxBackgroundColor="@color/bgColorButtonSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_friend_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/home_search_friend_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="80dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/bgColorButton"
        android:onClick="onSearchFriend"
        android:text="@string/action_search_friend"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputEditText" />

    <Button
        android:id="@+id/home_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/bgColorButtonSecondary"
        android:onClick="onSearchFriendBackClick"
        android:text="@string/action_back"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_search_friend_button" />

</androidx.constraintlayout.widget.ConstraintLayout>