<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://scemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:id="@+id/question_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center|center_horizontal|center_vertical"
    android:background="@color/bgColorMask"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/zoomed_character"
        android:layout_width="125dp"
        android:layout_height="160dp"
        android:layout_gravity="fill_vertical"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        card_view:cardBackgroundColor="@color/bgColorButton"
        card_view:cardCornerRadius="5dp">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/your_trophy_3"
            android:maxWidth="70dp"
            android:maxHeight="70dp"
            android:minWidth="30dp"
            android:minHeight="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icons8_face_64"
            android:visibility="visible" />

        <TextView
            android:id="@+id/character_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_horizontal"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:text="NAME"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/question_dialog_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/bgColorButtonSecondary"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.494"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/zoomed_character"
        app2:layout_constraintVertical_bias="0.1"
        app:contentPadding="20dp">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="question text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/answer_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/answer_yes" />

        <Button
            android:id="@+id/answer_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/answer_no" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>